cria seção princial (main) do html

--- a/iindex.html
+++ b/iindex.html
@@ -34,7 +34,35 @@
         </button>
     </header>
     <main>
-        
+      <section>
+        <h2>Produtos</h2>
+        <ul>
+            <li>
+               <figure>
+                <img src="/assets/images/camiseta_roxa.jpg"alt="Camiseta Dev em DobroRoxa">
+                <figcaption>Camiseta Dev em Dobro - Roxa</figcaption>
+               </figure> 
+               <div>
+               <span>Cor: Roxa</span> 
+               <span>Tamanho: M</span>
+               <span>R$ 89,00</span>
+               <button>Adicionar ao carrinho</button>
+               </div>
+            </li>
+            <li>
+               <figure>
+                <img src="/assets/images/camiseta_roxa.jpg"alt="Camiseta Dev em DobroRoxa">
+                <figcaption>Camiseta Dev em Dobro - Roxa</figcaption>
+               </figure> 
+               <div>
+               <span>Cor: Roxa</span> 
+               <span>Tamanho: M</span>
+               <span>R$ 89,00</span>
+               <button>Adicionar ao carrinho</button>
+               </div>
+            </li>
+        </ul>
+      </section>  
     </main>
     <footer></footer>
 </body>
