--- a/iindex.html
+++ b/iindex.html
@@ -40,7 +40,7 @@
             <li>
                <figure>
                 <img src="/assets/images/camiseta_roxa.jpg"alt="Camiseta Dev em DobroRoxa">
-                <figcaption>Camiseta Dev em Dobro - Roxa</figcaption>
+                <figcaption>Camiseta Dev em Dobro - Roxa </figcaption>
                </figure> 
                <div>
                <span>Cor: Roxa</span> 
@@ -64,7 +64,39 @@
         </ul>
       </section>  
     </main>
-    <footer></footer>
+    <footer>
+        <nav>
+            <h3>Institucional</h3>
+            <ul>
+                <li><a href="./iindex.html">Home</a></li>
+                <li><a href="#Sobre">Sobre</a></li>
+                <li><a href="#Produtos">Produtos</a></li>
+                <li><a href="#Perguntas">Perguntas Frequentes</a></li>
+                <li><a href="#Contato">Fale Conosco</a></li>
+            </ul>
+            <nav>
+            <h3>Ajuda</h3>
+            <ul>
+                <li><a href="#Trocas">Trocas e Devoluções</a></li>
+                <li><a href="#Termos">Termos e Condições</a></li>
+                <li><a href="#politica">Política de Privacidade</a></li>
+                <li><a href="#padrao">Padrão de qualidade</a></li>
+                
+            </ul>
+            <nav>
+            <h3>Endereço</h3>
+            <ul>
+                <li><a href="#">Rua Vale do Silicio</a></li>
+                <li>São Francisco, Califórnia</li>
+                <li>Estados Unidos da América</li>
+                <li><a href="#">(34) 11234-5522</a></li>
+                <li><a href="#">vendas@ecommercedd.com</a></li>
+            
+        </nav>
+        <div>
+            <p>@2024 - Todos os direitos reservados</p>
+        </div>
+    </footer>
 </body>
 
 </html>
